--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href={{"/assets/css/main.css" | relative_url }}>
   </head>
   <body class="bg-neutral-200 px-6 text-neutral-800 font-serif">
     <nav class="mt-6 flex justify-center">
